syntax = "proto3";

import "Protos/common.proto";

option csharp_namespace = "trb_officer_backend";

package user;

service UserService {
  rpc GetClientList (GetClientListRequest) returns (GetClientListReply);
  rpc GetOfficerList (GetOfficerListRequest) returns (GetOfficerListReply);
  rpc GetClient (GetClientRequest) returns (GetClientReply);
  rpc GetOfficer (GetOfficerRequest) returns (GetOfficerReply);
  rpc BlockUser (BlockUserRequest) returns (BlockUserReply);
  rpc CreateUser (CreateUserRequest) returns (CreateUserReply);
}

// Get Client List
message GetClientListRequest{
  string token = 1;
}
message GetClientListReply{
  repeated common.UserShort clients = 1;
}

// Get Officer List
message GetOfficerListRequest{
  string token = 1;
}
message GetOfficerListReply{
  repeated common.UserShort officers = 1;
}

// Get Client
message GetClientRequest{
  string token = 1;
  string clientId = 2;
}
message GetClientReply{
  common.Client client = 1;
}

// Get Officer
message GetOfficerRequest{
  string token = 1;
  string officerId = 2;
}
message GetOfficerReply{
  common.Officer officer = 1;
}

// Block User
message BlockUserRequest{
  string token = 1;
  string userId = 2;
}
message BlockUserReply{}

// Create User
message CreateUserRequest{
  string token = 1;
  string firstName = 2;
  string lastName = 3;
  optional string patronymic = 4;
  int64 birthDate = 5;
  string phoneNumber = 6;
  string address = 7;
  string passportNumber = 8;
  optional string passportSeries = 9;
  string whoCreatedId = 10;
  string email = 11;
  string password = 12;
  string sex = 13;
  bool isClient = 14;
  bool isOfficer = 15;
}
message CreateUserReply{
  string id = 1;
}